--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,10 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'org.projectlombok:lombok:1.18.12'
-    runtimeOnly 'com.h2database:h2'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket:2.4.0'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.4.0'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.4.0'
+    implementation 'org.projectlombok:lombok:1.18.16'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
