--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.3.3.RELEASE'
+    id 'org.springframework.boot' version '2.4.0'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'java'
 }
@@ -12,9 +12,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-websocket:2.4.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.4.0'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.4.0'
     implementation 'org.projectlombok:lombok:1.18.16'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
